--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       <!-- Material Design Bootstrap -->
       <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.19.1/css/mdb.min.css" rel="stylesheet">
       <title><%= htmlWebpackPlugin.options.title %></title>
+      <!-- Compiled and minified CSS -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> -->
   </head>
   <body>
     <noscript>
@@ -20,23 +22,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-
-<!-- <script>
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  var firebaseConfig = {
-    apiKey: "AIzaSyDGh1cfvCjmIw_uUeKWMi0Ieq9W6K673LI",
-    authDomain: "blog-lab-17b7d.firebaseapp.com",
-    projectId: "blog-lab-17b7d",
-    storageBucket: "blog-lab-17b7d.appspot.com",
-    messagingSenderId: "886882131782",
-    appId: "1:886882131782:web:866629ca6307b54ce50f47",
-    measurementId: "G-4J310YVSYS"
-  };
-  // Initialize Firebase
-  firebase.initializeApp(firebaseConfig);
-  firebase.analytics();
-</script> -->
         <!-- JQuery -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <!-- Bootstrap core JavaScript -->
